added change detection

--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -1,6 +1,7 @@
 .contact-container {
     max-width: 800px;
     margin: 0 auto;
+    margin-top: 50px;
     padding: 30px;
     background-color: #fff;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -38,11 +39,12 @@
   }
   
   input, textarea {
-    width: 100%;
+    width: 97%;
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 5px;
     font-size: 1rem;
+    resize: vertical;
   }
   
   input:focus, textarea:focus {
