--- a/src/app/core/app.component.scss
+++ b/src/app/core/app.component.scss
@@ -24,10 +24,19 @@ header {
   display: flex;
   margin: 0;
   padding: 0;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    padding: 10px;
+  }
 }
 
 .nav-item {
   margin: 0 20px;
+
+  @media (max-width: 768px) {
+    margin: 10px 0;
+  }
 }
 
 .nav-link {
@@ -36,22 +45,22 @@ header {
   font-size: 1.2rem;
   font-weight: bold;
   transition: color 0.3s ease, border-bottom 0.3s ease;
-}
 
-.nav-link:hover {
-  color: #00bcd4; 
-  border-bottom: 2px solid #00bcd4;
-}
-
-.active {
-  color: #00bcd4;
-  border-bottom: 2px solid #00bcd4;
+  &:hover, &.active {
+    color: #00bcd4; 
+    border-bottom: 2px solid #00bcd4;
+  }
 }
 
 .language-buttons {
   display: flex;
   align-items: center;
   margin-left: 20px;
+
+  @media (max-width: 768px) {
+    margin-left: 0;
+    margin-top: 10px;
+  }
 }
 
 .language-button {
@@ -64,37 +73,20 @@ header {
   font-size: 14px;
   border-radius: 4px;
   transition: background-color 0.3s ease;
-}
 
-.language-button:hover {
-  background-color: #0056b3;
-}
-
-.language-button:focus {
-  outline: none;
-}
-
-@media (max-width: 768px) {
-  .nav-list {
-    flex-direction: column;
-    padding: 10px;
+  &:hover {
+    background-color: #0056b3;
   }
 
-  .nav-item {
-    margin: 10px 0;
+  &:focus {
+    outline: none;
   }
 
-  .language-buttons {
-    margin-left: 0;
-    margin-top: 10px;
+  &.active-language {
+    background-color: #00bcd4; 
+
+    &:hover {
+      background-color: #0097a7;
+    }
   }
-}
-
-.language-button.active-language {
-  background-color: #00bcd4; 
-  color: white;
-}
-
-.language-button.active-language:hover {
-  background-color: #0097a7; 
 }
