#Rnj 105 mobile done

--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -8,6 +8,8 @@
 
   @media (max-width: 600px) {
     padding: 20px;
+    margin: 0;
+    box-shadow: none;
   }
 }
 
@@ -23,6 +25,9 @@
   p {
     color: #666;
     font-size: 1.1rem;
+    @media (max-width: 600px) {
+      text-align: justify;
+    }
   }
 }
 
