--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -5,11 +5,21 @@
   background-color: #fff;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
   border-radius: 15px;
+  @media (max-width: 768px) {
+    margin: 0;
+    box-shadow: none;
+    padding: 40px 20px;
+  }
 }
 
 .about-header {
   text-align: center;
   margin-bottom: 30px;
+  @media (max-width: 768px) {
+    p{
+      text-align: justify;
+    }
+  }
 
   h2 {
     font-size: 2.5rem;
@@ -45,15 +55,18 @@
     margin: 5px 0;
   }
 
-  @media (max-width: 768px) {
-    padding: 0 20px;
-  }
 }
 
 .about-footer {
   text-align: center;
   margin-top: 30px;
   font-size: 1.2rem;
+
+  @media (max-width: 768px) {
+    p{
+      text-align: justify;
+    }
+  }
 
   a {
     color: #007BFF;
