--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
 body {
     font-family: Arial, sans-serif;
+    @media (max-width: 768px) {
+      margin: 0;
+    }
   }
   
   .landing {
@@ -10,6 +13,9 @@ body {
     text-align: center;
     height: 100vh;
     background-color: #f4f4f4;
+    @media (max-width: 768px) {
+      padding: 0 28px;
+    }   
   }
   
   .hero h1 {
@@ -28,6 +34,9 @@ body {
     text-decoration: none;
     border-radius: 5px;
     font-size: 1rem;
+    @media (max-width: 768px) {
+      color: black;
+    }
   }
   
   .cta-button:hover {
