--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,9 @@
 body {
+    background: #6c678b;
     font-family: Arial, sans-serif;
     @media (max-width: 768px) {
       margin: 0;
+      background-color: white;
     }
   }
   
@@ -11,8 +13,12 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
-    height: 100vh;
     background-color: #f4f4f4;
+    max-width: 900px;
+    margin: 50px auto 0;
+    height: 30vw;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
     @media (max-width: 768px) {
       padding: 0 28px;
     }   
