#Rnj added work component

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,6 +5,7 @@
       <div class="cta-buttons">
         <a [routerLink]="routes.about" class="cta-button">{{"ABOUTPAGE.ABOUT_ME" | translate}}</a>
         <a [routerLink]="routes.contact" class="cta-button">{{"ABOUTPAGE.CONTACT_ME" | translate}}</a>
+        <a [routerLink]="routes.work" class="cta-button">{{"HOMEPAGE.WORK" | translate}}</a>
       </div>
     </div>
   </div>
