--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -1,5 +1,17 @@
-<div class="container">
-    <div class="container-inside">
-        {{'WORKPAGE.HEADING' | translate}}
+
+    <div class="main-container">
+                   <div class="projects-header">
+                    <h1>{{'WORKPAGE.HEADING' | translate}}</h1>
+                    <p>{{'WORKPAGE.SUB_HEADING' | translate}}</p>
+                </div>
+        <div class="grid-container">
+            <ng-container *ngFor="let item of workList">
+                <div class="tile" appHighLight={{item.background}}>
+                    <h2>{{item.name}}</h2>
+                    <p>{{item.desc}}</p>
+                    <a href="{{item.link}}" target="_blank">{{'WORKPAGE.BTN_TXT' | translate}}</a>
+                </div>
+            </ng-container>
+        </div>
     </div>
-</div>
+
