--- a/src/app/core/app.component.scss
+++ b/src/app/core/app.component.scss
@@ -7,7 +7,7 @@ body {
 
 header {
   background-color: #333;
-  padding: 10px 0;
+  padding: 17px 10px;
   @media (max-width: 768px) {
     display: none;
   }
@@ -22,8 +22,10 @@ header {
 .nav-list {
   list-style: none;
   display: flex;
+  justify-content: space-between;
   margin: 0;
   padding: 0;
+  width: 100%;
 
   @media (max-width: 768px) {
     flex-direction: column;
