--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -1,5 +1,5 @@
 <header>
-    <h1>{{'HOMEPAGE.MY_BLOG'}}</h1>
+    <h1>{{"HOMEPAGE.MY_BLOG" | translate}}</h1>
 </header>
 
 <main class="blog-page">
