Rnj add faq width fix

--- a/src/app/components/faqs/faq.component.scss
+++ b/src/app/components/faqs/faq.component.scss
@@ -19,13 +19,11 @@ h2 {
 }
 
 .faq-section {
-    max-width: 800px;
     margin: 0 auto;
     background-color: #fff;
     padding: 20px;
-    margin-top: 68px;
-    border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    height: 44vw;
 }
 
 .faq-container {
