--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -1,10 +1,8 @@
 .contact-container {
-  max-width: 800px;
-  margin: 50px auto 0;
   padding: 30px;
   background-color: #fff;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  border-radius: 10px;
+  height: 41.5vw;
 
   @media (max-width: 600px) {
     padding: 20px;
