--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,11 +14,9 @@ body {
     align-items: center;
     text-align: center;
     background-color: #f4f4f4;
-    max-width: 900px;
-    margin: 50px auto 0;
-    height: 30vw;
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
-    border-radius: 15px;
+    height: 44.2vw;
+    box-shadow: 0 6px 12px #0000001a;
+    width: 100%;
     @media (max-width: 768px) {
       padding: 0 28px;
     }   
