--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -4,6 +4,7 @@
 
 <main class="blog-page">
     <article class="post-detail" *ngIf="blogInfo">
+        <img [src]="blogInfo?.image" alt="" class="post-image">
         <h2 class="post-title">{{blogInfo?.name}}</h2>
         <p class="post-date">{{blogInfo?.date}}</p>
         <div class="post-content">
