--- a/src/app/components/blog/blog.component.scss
+++ b/src/app/components/blog/blog.component.scss
@@ -50,6 +50,11 @@ header h1 {
     margin-bottom: 20px;
 }
 
+.post-image{
+    width: 100%;
+    margin-bottom: 28px;
+}
+
 .post-content {
     font-size: 1.1em;
     line-height: 1.8;
