--- a/src/app/components/blogs/blogs.component.html
+++ b/src/app/components/blogs/blogs.component.html
@@ -3,6 +3,7 @@
         <h1 class="blog-title">{{ "HOMEPAGE.MY_BLOG" | translate}}</h1>
         <div class="blog-posts">
             <article *ngFor="let item of blogList; let i= index" class="blog-post" (click)="handleBlogNav(i)">
+                <img [src]="item.image" alt="" class="post-image">
                 <h2 class="post-title">{{item.name}}</h2>
                 <p class="post-meta">{{item.date}}</p>
                 <p class="post-summary">{{item.description}}</p>
