--- a/src/app/components/blogs/blogs.component.scss
+++ b/src/app/components/blogs/blogs.component.scss
@@ -35,6 +35,7 @@ body {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 30px;
+    cursor: pointer;
 }
 
 .blog-post {
@@ -53,6 +54,10 @@ body {
     font-size: 1.8rem;
     margin-bottom: 10px;
     color: #2c3e50;
+}
+
+.post-image{
+    width: 100%;
 }
 
 .post-meta {
