--- a/src/app/components/blogs/blogs.component.scss
+++ b/src/app/components/blogs/blogs.component.scss
@@ -42,7 +42,7 @@ body {
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 16px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
 }
 
@@ -54,6 +54,7 @@ body {
     font-size: 1.8rem;
     margin-bottom: 10px;
     color: #2c3e50;
+    min-height: 132px;
 }
 
 .post-image{
@@ -70,6 +71,7 @@ body {
     font-size: 1rem;
     color: #34495e;
     margin-bottom: 20px;
+    min-height: 126px;
 }
 
 .read-more {
