Rnj add services

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,9 +3,8 @@
       <h1>{{"HOMEPAGE.INTRO" | translate}}</h1>
       <p>{{"HOMEPAGE.DESCRIPTION" | translate}}</p>
       <div class="cta-buttons">
-        <a [routerLink]="routes.about" class="cta-button">{{"ABOUTPAGE.ABOUT_ME" | translate}}</a>
         <a [routerLink]="routes.contact" class="cta-button">{{"ABOUTPAGE.CONTACT_ME" | translate}}</a>
-        <a [routerLink]="routes.work" class="cta-button">{{"HOMEPAGE.WORK" | translate}}</a>
+        <a [routerLink]="routes.work" class="cta-button">{{"HOMEPAGE.WORK" | translate | uppercase}}</a>
       </div>
     </div>
   </div>
