--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -1,5 +1,5 @@
 .contact-container {
-  padding: 30px;
+  padding: 30px 782px;
   background-color: #fff;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   height: 41.5vw;
