--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -6,10 +6,12 @@
                 </div>
         <div class="grid-container">
             <ng-container *ngFor="let item of workList">
-                <div class="tile" appHighLight={{item.background}}>
-                    <h2>{{item.name}}</h2>
-                    <p>{{item.desc}}</p>
-                    <a href="{{item.link}}" target="_blank">{{'WORKPAGE.BTN_TXT' | translate}}</a>
+                <div class="tile">
+                    <img [src]="item.background">
+                    <div class="conta">
+                        <div class="first">{{item.name}}</div>
+                        <p class="second">{{item.desc}}</p>
+                    </div>
                 </div>
             </ng-container>
         </div>
