--- a/src/app/components/blogs/blogs.component.scss
+++ b/src/app/components/blogs/blogs.component.scss
@@ -33,7 +33,7 @@ body {
 
 .blog-posts {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(442px, 1fr));
     gap: 30px;
 }
 
@@ -54,11 +54,12 @@ body {
     font-size: 1.8rem;
     margin-bottom: 10px;
     color: #2c3e50;
-    min-height: 132px;
+    min-height: 80px;
 }
 
 .post-image{
     width: 100%;
+    margin-bottom: 28px;
 }
 
 .post-meta {
@@ -71,7 +72,7 @@ body {
     font-size: 1rem;
     color: #34495e;
     margin-bottom: 20px;
-    min-height: 126px;
+    min-height: 76px;
 }
 
 .read-more {
