--- a/src/app/components/work/work.component.scss
+++ b/src/app/components/work/work.component.scss
@@ -117,5 +117,8 @@ body {
 
 .projects-header p {
     font-size: 16px;
-    margin-bottom: 40px;
+    margin-bottom: 8px;
+    color: #7f8c8d;
+    margin-top: 8px;
+    text-align: start;
 }
