--- a/src/app/components/faqs/faq.component.scss
+++ b/src/app/components/faqs/faq.component.scss
@@ -34,7 +34,7 @@ h2 {
     width: 80%;
     max-width: 1200px;
     overflow: hidden;
-    background: linear-gradient(145deg, #2c3e50, #34495e);
+    background: linear-gradient(304deg, #372828, #476b8f);
     box-shadow: 0 10px 40px rgba(0, 0, 0, 0.3);
 }
 
